<resources>
    <string name="app_name">CapstoneMovie</string>
    <string name="trending_now">Trending Now</string>
    <string name="favorite">Favorite</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="play">Play</string>
    <string name="title_home">Home</string>
    <string name="title_info">Search</string>
    <string name="title_favorite">favorite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search">Search Movie</string>
    <string name="search_hint">Find movies, genre and others</string>
</resources>